--- a/Collabily/src/app/components/sidebar/sidebar.component.html
+++ b/Collabily/src/app/components/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)">
+        <a class="nav-link" href="javascript:void(0)" [routerLink]="['./landing']">
           <i class="material-icons">person</i>
           <p>
             <span class="d-lg-none d-md-block">Logout</span>
