Brand Manager Dashboard

--- a/Collabily/src/app/sign-in/sign-in/sign-in.component.html
+++ b/Collabily/src/app/sign-in/sign-in/sign-in.component.html
@@ -42,7 +42,7 @@
         </div>
         <!-- <button type="submit" mat-raised-button color="primary" [ngClass]="{'btn_next': loginFormGroup.valid}"
           [disabled]="loginFormGroup?.invalid">Sign in <mat-icon>trending_flat</mat-icon> </button> -->
-          <button type="submit" mat-raised-button color="primary" [ngClass]="{'btn_next': loginFormGroup.valid}"
+          <button type="submit" mat-raised-button color="primary" class="btn_next"
           >Sign in <mat-icon>trending_flat</mat-icon> </button>
           <p>
             <!-- Not registered yet? <a [routerLink]="['/register']"> Create an Account</a> -->
