--- a/Collabily/src/styles.scss
+++ b/Collabily/src/styles.scss
@@ -85,3 +85,22 @@ $MaterialIcons_FontPath: "~material-icons-font/fonts";
 .category_select {
   margin-top: 45px;
 }
+
+
+// brand icon colors
+
+.instagram {
+  color: #833AB4;
+}
+
+.facebook {
+  color: #3b5998;
+}
+
+.youTube {
+  color: #FF0000;
+}
+
+.twitter {
+  color: #1DA1F2;
+}
