--- a/Collabily/src/app/opportunity/opportunities-wrapper/components/opportunity-response-card/opportunity-response-card.component.html
+++ b/Collabily/src/app/opportunity/opportunities-wrapper/components/opportunity-response-card/opportunity-response-card.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="responders" [ngClass]="{'panel_expanded': panelOpenState, 'panel_collapsed': !panelOpenState}">
-  <div class="d-flex" *ngFor="let responder of responders; last as last; first as first;" [ngClass]="{'border-bottom': !last, 'mb-5': last}">
+  <div class="d-flex" *ngFor="let responder of responders; last as last; first as first;" [ngClass]="{'border-bottom': !last, 'mb-3': last }">
     <div class="w-100 d-flex justify-content-between align-items-center" [ngClass]="{'mb-3': first, 'mt-3': last, 'my-3': !(first || last)  }">
       <div class="d-flex">
         <img [src]="responder.image" [alt]="responder.name"
@@ -39,7 +39,7 @@
         </div>
       </div>
       <button mat-raised-button color="primary"
-        style="background-color: rgb(0, 0, 97); font-size: x-small; display: flex; align-items: center; justify-content: center; padding: 0 10px; width: 100px;"> Assign
+        style="background-color: rgb(0, 0, 97); font-size: x-small; display: flex; align-items: center; justify-content: center; padding: 0 10px; width: 100px;"> Send Proposal
         <mat-icon style="font-size: medium; height: 16px; width: 16px;">trending_flat</mat-icon>
       </button>
     </div>
