--- a/Collabily/src/app/sign-in/sign-in/sign-in.component.sass
+++ b/Collabily/src/app/sign-in/sign-in/sign-in.component.sass
@@ -86,3 +86,11 @@ $small: 900px
 
 form
   width: 100%
+
+.btn_next
+  background-color: rgb(0, 0, 97)
+  color: #fff
+
+  &:disabled
+    background-color: rgba(0, 0, 97, 0.8)
+    color: darkgrey
